--- a/_includes/post.html
+++ b/_includes/post.html
@@ -5,7 +5,7 @@
 <article>
 
 	<div class="col-sm-10">
-	 <span class="post-date">
+  	<small>
 	   {% assign d = page.date | date: "%d" | plus:'0' %}
 	   {{ page.date | date: "%B" }} 
 	   {% case d %}
@@ -15,7 +15,7 @@
 	     {% else %}{{ d }}th,
 	   {% endcase %}
 	   {{ page.date | date: "%Y" }}
-	 </span>
+	 </small>
 	  <div class="article_body">
 	  {{ content }}
 	  </div>
