fix some post, take a reset

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -16,7 +16,7 @@
 	   {% endcase %}
 	   {{ page.date | date: "%Y" }}
 	 </small>
-	  <div class="article_body">
+	  <div class="article_body" id="article_body">
 	  {{ content }}
 	  </div>
 
