--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,3 +218,32 @@ footer {
     left: inherit;
     right: 0px;
 }
+
+
+#sideBar {
+	position: fixed;
+	margin-top: 30px;
+}
+
+#sideBarContents dl{
+	font-size: 12px;
+    margin:0;
+    padding:0;
+}
+
+#sideBarContents dt{
+    margin-top:5px;
+    margin-left:8px;
+}
+
+#sideBarContents dd, dt {
+    cursor: pointer;
+}
+
+#sideBarContents dd {
+    margin-left: 30px;
+}
+
+#sideBarContents dd:hover, dt:hover {
+    color:#1abc9c;
+}
