--- a/_includes/post.html
+++ b/_includes/post.html
@@ -26,14 +26,14 @@
 		  {% assign categories_list = page.categories %}
 		  {% if categories_list.first[0] == null %}
 			{% for category in categories_list %} 
-				<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref">
+				<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}">
 					{{ category | join: "/" }} <span>({{ site.categories[category].size }})</span>
 					{% unless forloop.last %},{% endunless %}
 				</a></li>
 			{% endfor %}
 		  {% else %}
 			{% for category in categories_list %} 
-				<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref">
+				<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}">
 					{{ category[0] | join: "/" }} <span>/{{ category[1].size }})</span>
 				</a></li>
 			{% endfor %}
@@ -48,7 +48,7 @@
 		  {% if tags_list.first[0] == null %}
 			{% for tag in tags_list %} 
 				<li>
-					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag }}-ref">
+					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag }}">
 					{{ tag }} <span>({{ site.tags[tag].size }})</span>
 					{% unless forloop.last %},{% endunless %}
 					</a>
@@ -57,7 +57,7 @@
 		  {% else %}
 			{% for tag in tags_list %} 
 				<li>
-					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag[0] }}-ref">
+					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag[0] }}">
 						{{ tag[0] }} <span>({{ tag[1].size }})</span>
 						{% unless forloop.last %},{% endunless %}
 					</a>
