new posts and style changed

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -63,10 +63,10 @@
 		{% include sidebar.html %}
 	</div>
 
-	<div class="col-sm-9 typo" style="background-color:#fff;">
-		<div class="col-sm-8" style=" padding: 40px 0; ">{{ content }}</div>
-			<div class="col-sm-4 hidden-xs typo" style=" padding-top: 90px; ">
-		<h4>扫一扫，手机阅读</h4>
+	<div class="typo col-sm-9" style="background-color:#fff;">
+		<div class="col-sm-10" style=" padding: 40px 0; ">{{ content }}</div>
+			<div class="col-sm-2 hidden-xs typo" style=" padding-top: 90px; ">
+		<h5>手机阅读</h5>
 		<div class='qrcode'></div>
 
 		<div id="sideBar">
